# edu-apitest

./: .travis.yaml  README.md  pyproject.toml
unittest/: test_core.py
